<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ResistorDetect</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="capture_button_text">Capture</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="focus_button_text">Focus</string>
    <string name="take_picture_button_text">Take picture</string>
	<string name="next_image_button_text">Next image</string>
    <string name="previous_image_button_text">Previous image</string>
    <string name="save_image_button_text">Save image</string>
</resources>
