<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CameraActivity">

    <FrameLayout
        android:id="@+id/camera_preview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <view
            android:id="@+id/opencv_camera_preview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            class="com.example.resistordetect.CameraOpenCVPreView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >
		<!--  
        <view
            android:id="@+id/opengl_camera_preview"
            android:layout_width="1dp"
            android:layout_height="1dp"
            class="com.example.resistordetect.CameraOpenGLPreView" />
            -->
        <ImageView
            android:id="@+id/loaded_image_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
             >
        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_focus"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:text="@string/focus_button_text" />
        <TextView 
            android:id="@+id/loaded_image_indices_text_view"
            android:layout_width="wrap_content"
            android:layout_height="0dp" 
            android:textColor="@color/text_color"
            android:layout_weight="0.2"
            />
        <Button
            android:id="@+id/button_next_image"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:text="@string/next_image_button_text" />
        <Button
            android:id="@+id/button_previous_image"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:text="@string/previous_image_button_text" />
        <Button
            android:id="@+id/button_take_picture"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:text="@string/take_picture_button_text" />
       	<Button
            android:id="@+id/button_save_picture"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/save_image_button_text" />
    </LinearLayout>

    <ImageView
        android:id="@+id/debug_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0" >
    </ImageView>
    
</LinearLayout>